# QDecomp

./: .gitignore  Domega.py  Makefile  README.md  S3missing.txt  Zomega.py  gates.py  pyproject.toml  readthedocs.yaml  requirements.txt  test_Zomega.py
1D_grid_algorithm/: Z_sqrt2.py
CNOT_decomposition/: cnot_decomposition.py  test_cnot_decomposition.py
Diophantine_cpp/: diophantine_equation.cpp  diophantine_equation.hpp  diophantine_equation_cpp.py  diophantine_equation_lib.cpp  makefile  test_diophantine_equation.cpp
Diophantine_equation/: diophantine_equation.py  diophantine_equation_example.py  test_diophantine_equation.py
Steiner_ellipse/: Steiner_ellipse.py  Steiner_example.ipynb  steiner_ellipse.py  steiner_example.ipynb  steiner_example.py  test_steiner_ellipse.py
ZYZ_decomposition/: test_zyz_decomposition.py  zyz_decomposition.py  zyz_decomposition_example.py
benchmarks/: .gitignore  Makefile  benchmark_utils.py  benchmarking_functions.py  run_benchmarks.py
docs/: Makefile
docs/source/: api_reference.rst  conf.py  decompositions.rst  examples.rst  index.rst  installation.md  installation.rst  introduction.rst  plot.rst  references.bib  rings.rst  tutorial.rst
docs/source/_autosummary/: qdecomp.decompositions.zyz.rst  (+1 more)
exact_synthesis/: exact_synthesis.py  s3_generator.py  test_exact_synthesis.py
examples/: 1d_grid_problem_example.py  steiner_example.py
grid_algithm_1D/: Zsqrt2.py  grid_algorithm_1D.py
grid_algorithm_1D/: Dsqrt2.py  Dsqrt2_2x2matrix.py  Grid_Problem.py  Rings.py  State.py  Zsqrt2.py  diophantine_equation.py  grid_algorithm_1D.py  grid_algorithm_2D.py  grid_operator.py  matrix_state.py  rz_approx.py  test_grid_algorithm_1D.py  test_grid_algorithm_2D.py  test_grid_operator.py  test_grid_problem.py  test_rings.py  test_state.py  test_zsqrt2.py
grid_algorithm_1D/Examples/: 1d_grid_problem_example.ipynb  1d_grid_problem_example.py
rings_cpp/: D.cpp  D.hpp  Domega.cpp  Domega.hpp  Dsqrt2.cpp  Dsqrt2.hpp  Zomega.cpp  Zomega.hpp  Zsqrt2.cpp  Zsqrt2.hpp
src/cliffordplust/: gates.py  rings.py
src/cliffordplust.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qdecomp/: __init__.py  gates.py
test/test_1D_grid_problem/: test_zsqrt2.py
tests/cpp/: test_main.cpp
tests/test_circuit/: test_qgate.py
tests/test_decomposition/: test_cnot_decomposition.py  test_zyz_decomposition.py
tests/test_decompositions/: test_circuit.py  test_cnot.py  test_diophantine_equation.py  test_rz_decomp.py  test_sqg_decomp.py  test_tqg_decomp.py  test_zyz.py
tests/test_diophantine/: test_diophantine_equation.cpp  test_diophantine_equation.py  test_diophantine_equation_cpp.py
tests/test_exact_synthesis/: test_exact_synthesis.py
tests/test_grid_algorithm_1D/: test_grid_algorithm_1D.py
tests/test_grid_problem/: test_gate.py  test_grid_algorithm_1D.py  test_grid_algorithms.cpp  test_grid_algorithms.py  test_grid_operator.py  test_grid_problem.py  test_rz_approx.py  test_state.py  test_steiner_ellipse.py
tests/test_grid_problems/: test_grid_operator.py  test_grid_problem.py  test_rz_approx.py  test_steiner_ellipse.py
tests/test_rings/: test_d.py  test_domega.py  test_dsqrt2.py  test_zomega.py  test_zsqrt2.py
tests/test_utils/: test_exact_synthesis.py  test_gates.py  test_gates_utils.py  test_qgate.py  test_steiner_ellipse.py
utils/: sequence_opt.py
(+173 files in other folders)
