[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QDecomp"
dynamic = ["version"]
authors = [
  { name="Francis Blais", email="francis.blais@polymtl.ca" },
  { name="Marius Trudeau", email="marius.trudeau@polymtl.ca" },
  { name="Olivier Romain", email="olivier.romain@polymtl.ca" },
  { name="Vincent Girouard", email="vincent-2.girouard@polymtl.ca" },
]
description = "Clifford+T quantum gate compiler."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.4",
    "mpmath>=1.3.0",
    "matplotlib>=3.10.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/polyquantique/CliffordPlusT"

[tool.setuptools.packages.find]
where = ["src"]   

[tool.setuptools.dynamic]  
version = {attr = "qdcomp.__version__"}