[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QDecomp"
dynamic = ["version"]
authors = [
  { name="Francis Blais", email="francis.blais@polymtl.ca" },
  { name="Marius Trudeau", email="marius.trudeau@polymtl.ca" },
  { name="Olivier Romain", email="olivier.romain@polymtl.ca" },
  { name="Vincent Girouard", email="vincent-2.girouard@polymtl.ca" },
]
description = "Clifford+T quantum gate compiler."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.4",
    "mpmath>=1.3.0",
    "scipy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/polyquantique/QDecomp"
Documentation = "https://qdecomp.readthedocs.io/en/latest/"
Issues = "https://github.com/polyquantique/QDecomp/issues"

[tool.setuptools.packages.find]
where = ["src"]   

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]  
version = {attr = "qdecomp.__version__"}